--- a/assets/style.css
+++ b/assets/style.css
@@ -1,50 +1,42 @@
 body {
+    background-image: url("image/Enlight29.jpg");
     text-align: center;
-    background-color: #56594A;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: black;
+    color: white;
 }
 
-/* background-image: url("immage/2b87ce43e374d83b194fa4fe69745d9a.png");
-    background-repeat: no-repeat;
-    background-position: right top; 
-}*/
-
-span {
-    font-size: 30px;
-    font-family: "Lato", "Open Sans", "Helvetica Neue";
-    color: rgb(233, 226, 14);
-    font-weight: 400;
+#form, label {
+    margin-top: 7vw; 
+    align-content: center;
+    font-size: 20px;
 }
 
 h1 {
-    color: #272844;
     font-size: 25px;
     font-weight: 200;
 }
 
 #image-container{
     display: inline;
+    transition-timing-function: ease-in-out;
+    transition: 0.5s;
 }
 
-#image-container > img {
-   
+.choice-image{
     margin: 0 30px;
 }
 
-.game {
-    margin: 0 100px;
-}
+.choice-image:hover {
+    margin: 0 30px;
+    transform: scale(1);
+    cursor: pointer;
+  }
 
-#form {
-    margin: 20px 0;
-}
-#show_result {
-    color: white;
-    font-weight: 400;
-    font-family: "Lato", "Open Sans", "Helvetica Neue";
-    font-size: 25px;
-}
 
-#do_it {
-    color: #272844;
-}
 
+#image-container, #user-interaction {
+    visibility: hidden;
+    margin: 5vw;
+}
