--- a/assets/style.css
+++ b/assets/style.css
@@ -1,42 +1,89 @@
+html,
 body {
-    background-image: url("image/Enlight29.jpg");
-    text-align: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-color: black;
-    color: white;
+  min-height: 100%;
+  display: inline;
 }
 
-#form, label {
-    margin-top: 7vw; 
-    align-content: center;
-    font-size: 20px;
+body {
+  background-image: url("image/Enlight29.jpg");
+  text-align: center;
+  background-size: cover;
+  background-color: black;
+  color: white;
+  font-family: 'Alatsi', sans-serif;
+  font-size: 25px;
+  color: #94A5AD;
 }
 
-h1 {
-    font-size: 25px;
-    font-weight: 200;
+#form,
+label, 
+input {
+  margin: 2vw auto 2vw auto;
+  align-content: center;
+  font-size: 20px;
 }
 
-#image-container{
-    display: inline;
-    transition-timing-function: ease-in-out;
-    transition: 0.5s;
+#nickname {
+  margin: 1vw;
+  background-color: black;
+  color: white;
 }
 
-.choice-image{
-    margin: 0 30px;
+h1, label, #user-input {
+  font-size: 25px;
+  font-weight: 200;
+  background: -webkit-linear-gradient(#94A5AD, white, silver);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#submit {
+  margin: 2vw auto;
+  font-size: 20px;
+  color: black;
+  border: solid 0.07em silver;
+  background-color:;
+  font-weight: 600;
+  }
+
+#user-interaction {
+  padding: 2vw;
+  color: aqua;
+}
+
+#image-container {
+  display: inline-block;
+  margin: 3vw;
+}
+
+.choice-image {
+  max-width: 100%;
+  max-height: 100%;
+  margin: 0 0.5vw;
+  box-shadow: 3px 5px 2px black, 0 2px 8px white;
+  border-radius: 20%;
+  background-color: white;
+  transition-timing-function: ease-in-out;
+  transition: 0.5s;
 }
 
 .choice-image:hover {
-    margin: 0 30px;
-    transform: scale(1);
-    cursor: pointer;
-  }
+  margin: 0 30px;
+  transform: scale(1);
+  cursor: pointer;
+  padding: 10px;
+  box-shadow: 0 8px 10px 0 lavender, 0 6px 10px 0 blue;
+}
 
+#image-container {
+  display: inline-block;
+  position: relative;
+}
 
-
-#image-container, #user-interaction {
-    visibility: hidden;
-    margin: 5vw;
+#game-container {
+  visibility: hidden;
+  height: 35vw;
+  background-color: black;
+  max-width: 60%;
+  margin: auto;
 }
