--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,6 @@
 html,
 body {
   min-height: 100%;
-  display: inline;
 }
 
 body {
@@ -10,13 +9,26 @@ body {
   background-size: cover;
   background-color: black;
   color: white;
-  font-family: 'Alatsi', sans-serif;
   font-size: 25px;
-  color: #94A5AD;
+  color: #94a5ad;
+}
+
+#start-container {
+  margin: auto;
+  display: block;
+}
+
+h1,
+label,
+#user-input {
+  font-size: 25px;
+  font-weight: 200;
+  color: azure;
+  font-weight: 200;
 }
 
 #form,
-label, 
+label,
 input {
   margin: 2vw auto 2vw auto;
   align-content: center;
@@ -29,22 +41,28 @@ input {
   color: white;
 }
 
-h1, label, #user-input {
-  font-size: 25px;
-  font-weight: 200;
-  background: -webkit-linear-gradient(#94A5AD, white, silver);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 #submit {
   margin: 2vw auto;
   font-size: 20px;
   color: black;
   border: solid 0.07em silver;
-  background-color:;
-  font-weight: 600;
-  }
+  font-weight: 200;
+  font-family: "Lilita One", cursive;
+  box-shadow: 2px 2px 2px lavender, 0 2px 10px 0 cornflowerblue;
+}
+
+#submit:hover {
+  background-color: aqua;
+  cursor: pointer;
+}
+
+#game-container {
+  visibility: hidden;
+  height: 25vw;
+  background-color: black;
+  max-width: 60%;
+  margin: auto;
+}
 
 #user-interaction {
   padding: 2vw;
@@ -53,6 +71,7 @@ h1, label, #user-input {
 
 #image-container {
   display: inline-block;
+  position: relative;
   margin: 3vw;
 }
 
@@ -60,11 +79,11 @@ h1, label, #user-input {
   max-width: 100%;
   max-height: 100%;
   margin: 0 0.5vw;
-  box-shadow: 3px 5px 2px black, 0 2px 8px white;
   border-radius: 20%;
   background-color: white;
   transition-timing-function: ease-in-out;
   transition: 0.5s;
+  border: solid 2px darkgray;
 }
 
 .choice-image:hover {
@@ -72,18 +91,32 @@ h1, label, #user-input {
   transform: scale(1);
   cursor: pointer;
   padding: 10px;
-  box-shadow: 0 8px 10px 0 lavender, 0 6px 10px 0 blue;
+  box-shadow: 1px 1px 10px 5px cornflowerblue;
 }
 
-#image-container {
-  display: inline-block;
-  position: relative;
-}
-
-#game-container {
-  visibility: hidden;
-  height: 35vw;
+#restart {
+  display: block;
+  padding: 0.5em 0.5em;
+  border: 0.1em solid blue;
+  border-radius: 0.12em;
+  font-weight: 500;
+  color: blue;
+  text-align: center;
   background-color: black;
-  max-width: 60%;
-  margin: auto;
+  box-shadow: 2px 2px 2px blue;
+  font-family: "Lilita One", cursive;
+}
+
+#chat-container {
+   visibility: hidden;
+   background-color: black;
+    max-width: 60%;
+    margin: auto;
+    margin-top: 2vw;
+    opacity: 80%;
+    color: aqua;
+}
+
+#chat{
+  margin-top: 1vw;
 }
