--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ body {
   min-height: 100%;
 }
 
-html{
+html {
   overflow-y: scroll;
 }
 
@@ -13,29 +13,27 @@ body {
   background-size: cover;
   background-color: black;
   color: white;
-  font-family: 'Girassol', cursive;;
+  font-family: "Girassol", cursive;
   font-size: 25px;
   font-weight: 100;
   color: #94a5ad;
 }
 
-#start-container {
-  margin: 5vw auto 0 auto;
-  display: block;
+#form-container {
+  margin: 5vw auto;
 }
 
 h1,
-label,
-#user-input {
+label {
   font-size: 25px;
   font-weight: 200;
-  color: azure;
+  color: #f23838;
   font-weight: 200;
 }
 
 #form,
 label,
-input {
+#nickname {
   margin: 2vw auto 2vw auto;
   align-content: center;
   font-size: 20px;
@@ -44,112 +42,166 @@ input {
 #nickname {
   margin: 1vw;
   background-color: black;
-  color: aqua;
+  color: white;
   border: none;
-  border-bottom: 2px solid azure;
+  border-bottom: 0.1vw solid azure;
+  padding: 0.8vw;
 }
 
 #nickname:hover {
-  border-bottom: 2px solid azure;
+  border-bottom: 0.1vw solid #f23838;
+  box-shadow: 0 0 0 #f23838;
+  animation: pulse 1.5s infinite;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(242, 56, 56, 0.4);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 10px rgba(242, 56, 56, 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(242, 56, 56, 0);
+  }
+}
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(242, 56, 56, 0.4);
+    box-shadow: 0 0 0 0 rgba(242, 56, 56, 0.4);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 20px rgba(242, 56, 56, 0);
+    box-shadow: 0 0 0 20px rgba(242, 56, 56, 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(242, 56, 56, 0);
+    box-shadow: 0 0 0 0 rgba(242, 56, 56, 0);
+  }
 }
 
 #submit {
-  margin: 2vw auto;
-  font-size: 20px;
-  color: black;
-  border: solid 0.07em silver;
-  font-weight: 200;
-  font-family: 'Girassol', cursive;;
-  box-shadow: 2px 2px 2px lavender, 0 2px 10px 0 cornflowerblue;
+  background-color: black;
+  padding: 0.9vw 1.8vw;
+  color: white;
+  border: 0.1vw solid white;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 1em;
 }
 
-#submit:hover {
-  background-color: aqua;
+#submit:hover,
+#submit:focus {
   cursor: pointer;
-  border: solid 0.07em black;
+  background-color: #f23838;
+  border: solid 0.07em #f23838;
+}
+
+#game-chat-container {
+  visibility: hidden;
+  margin: 0 auto;
+  display: grid;
+  grid-gap: 1.5%;
+  grid-auto-columns: 100%;
+  grid-template-columns: 30% 40% 17%;
+}
+
+#chat-container {
+  font-family: "Inria Serif", serif;
+  font-size: 20px;
+  color: blanchedalmond;
+  background-color: #0000004D;
+  border: solid 0.3vw black;
+}
+
+#chat-input {
+  vertical-align: middle;
+  background-color: initial;
+  border: 0.15vw solid black;
+  margin: 0.7vw auto;
+  width: 50%;
+  font-size: 1.2em;
+}
+
+#chat-button {
+  vertical-align: middle;
+  background-color: black;
+  font-size: 0.8em;
+  width: 5.5vw;
+  padding: 0.7vw;
+  color: #f23838;
+  border: none;
+}
+
+#chat-button:hover {
+  color: black;
+  background-color: #f23838;
+  border: 0.1em solid black;
+  cursor: pointer;
 }
 
 #game-container {
-  visibility: hidden;
-  height: 25vw;
-  background-color: black;
-  max-width: 60%;
-  margin: auto;
+  height: 100px;
+  display: inline-grid;
+  grid-auto-columns: 100%;
+  grid-template-columns: auto;
+  grid-gap: 4vw;
 }
 
 #user-interaction {
   padding: 2vw;
-  color: aqua;
+  color: #f23838;
+  background-color: #000000e2;
 }
 
 #image-container {
-  display: inline-block;
-  position: relative;
-  margin: 1vw 0;
+  display: inline-grid;
+  grid-auto-columns: 100%;
+  grid-template-columns: auto;
+  margin: auto;
 }
 
 .choice-image {
-  max-width: 100%;
-  max-height: 100%;
-  margin: 1vw;
+  width: 10vw;
+  height: 10vw;
+  margin: 0.5vw;
   border-radius: 20%;
   background-color: white;
   transition-timing-function: ease-in-out;
   transition: 0.5s;
-  border: solid 2px darkgray;
+  border: solid 1px darkgray;
 }
 
 .choice-image:hover {
   margin: 0.1vw;
   cursor: pointer;
-  padding: 0.9vw;
+  padding: 0.4vw;
   box-shadow: 1px 1px 10px 5px cornflowerblue;
 }
 
 #restart {
   display: block;
   padding: 0.5em 0.5em;
-  border: 0.1em solid blue;
-  border-radius: 0.12em;
   font-weight: 500;
   color: lavender;
   text-align: center;
-  background-color: blue;
-  box-shadow: 2px 2px 2px lavender;
-  font-family: 'Girassol', cursive;
+  background-color: #f23838;
+  border: none;
+  font-size: 0.7em;
+  margin: auto;
 }
 
-#restart:hover{
-  background-color: aqua;
-  color:black;
-  border: 0.1em solid black;
+#restart:hover {
+  background-color: #f23838;
+  color: white;;
   cursor: pointer;
+  box-shadow: inset -4em 0 0 0 rgb(0, 0, 0), inset 4em 0 0 0 rgb(0, 0, 0);
+  transition: ease-out 0.7s;
 }
 
-#chat-container {
-   visibility: hidden;
-    background-color: #000000E2;
-    max-width: 60%;
-    margin: auto;
-    margin-top: 2vw;
-    font-family: 'Inria Serif', serif;
-    font-size: 20px;
-    color: aqua;
-}
-
-#chat{
-  margin-top: 1vw;
-}
-
-#chat-button{
-  color: black;
-  background-color: aqua;
-  font-weight: 200;
-  font-family: 'Girassol', cursive;
-  border: 0.1em solid black;
-}
-
-#chat-button:hover {
-  background-color: navy;
-  border: 0.1em solid black;
+#user-score {
+  background-color: #00000080;
+  color: #f23838;
+  font-size: 1.5vw;
+  padding: 0.5vw 0;
 }
