--- a/assets/style.css
+++ b/assets/style.css
@@ -9,43 +9,42 @@ html {
 
 body {
   background-image: url("image/Enlight29.jpg");
-  text-align: center;
   background-size: cover;
   background-color: black;
   color: white;
-  font-family: "Girassol", cursive;
-  font-size: 25px;
-  font-weight: 100;
-  color: #94a5ad;
+  font-family: "Righteous", cursive;
+  font-size: 1.5em;
+  text-align: center;
 }
 
 #form-container {
   margin: 5vw auto;
 }
 
+h1 {
+  font-size: 2vw;
+}
+
 h1,
 label {
-  font-size: 25px;
-  font-weight: 200;
   color: #f23838;
-  font-weight: 200;
 }
 
 #form,
 label,
 #nickname {
-  margin: 2vw auto 2vw auto;
+  margin: 2vw auto;
   align-content: center;
-  font-size: 20px;
+  font-size: 2vw;
 }
 
 #nickname {
-  margin: 1vw;
   background-color: black;
+  margin: 1vw;
+  padding: 0.8vw;
   color: white;
   border: none;
-  border-bottom: 0.1vw solid azure;
-  padding: 0.8vw;
+  border-bottom: 0.1vw solid #f23838;
 }
 
 #nickname:hover {
@@ -82,66 +81,68 @@ label,
 
 #submit {
   background-color: black;
-  padding: 0.9vw 1.8vw;
-  color: white;
-  border: 0.1vw solid white;
   display: inline-block;
+  padding: 0.9vw 1.8vw;
+  border: 0.1vw solid #f23838;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 0.8em;
+  color: #f23838;
 }
 
 #submit:hover,
 #submit:focus {
-  cursor: pointer;
   background-color: #f23838;
   border: solid 0.07em #f23838;
+  color: white;
+  cursor: pointer;
 }
 
 #game-chat-container {
   visibility: hidden;
-  margin: 0 auto;
   display: grid;
   grid-gap: 1.5%;
   grid-auto-columns: 100%;
   grid-template-columns: 30% 40% 17%;
+  margin: 0 auto;
 }
 
 #chat-container {
+  background-color: #0000004d;
   font-family: "Inria Serif", serif;
-  font-size: 20px;
+  font-size: 0.9em;
   color: blanchedalmond;
-  background-color: #0000004D;
-  border: solid 0.3vw black;
+  border: solid 0.2vw black;
 }
 
 #chat-input {
   vertical-align: middle;
-  background-color: initial;
-  border: 0.15vw solid black;
-  margin: 0.7vw auto;
   width: 50%;
-  font-size: 1.2em;
+  background-color: initial;
+  margin: 0.7vw auto;
+  padding: 0.6vw;
+  border: 0.15vw solid black;
+  color: blanchedalmond;
 }
 
 #chat-button {
   vertical-align: middle;
+  width: 5vw;
   background-color: black;
-  font-size: 0.8em;
-  width: 5.5vw;
-  padding: 0.7vw;
-  color: #f23838;
+  padding: 0.6vw;
   border: none;
+  font-size: 0.7em;
+  color: #f23838;
 }
 
 #chat-button:hover {
-  color: black;
   background-color: #f23838;
-  border: 0.1em solid black;
+  border: 0.1vw solid black;
+  color: black;
   cursor: pointer;
 }
 
 #game-container {
-  height: 100px;
+  height: 7vw;
   display: inline-grid;
   grid-auto-columns: 100%;
   grid-template-columns: auto;
@@ -149,9 +150,9 @@ label,
 }
 
 #user-interaction {
+  background-color: #000000e2;
   padding: 2vw;
   color: #f23838;
-  background-color: #000000e2;
 }
 
 #image-container {
@@ -169,39 +170,50 @@ label,
   background-color: white;
   transition-timing-function: ease-in-out;
   transition: 0.5s;
-  border: solid 1px darkgray;
+  border: solid 0.06vw darkgray;
 }
 
 .choice-image:hover {
   margin: 0.1vw;
   cursor: pointer;
   padding: 0.4vw;
-  box-shadow: 1px 1px 10px 5px cornflowerblue;
+  box-shadow: 0px 7px 16.5px 7.5px aqua, 0px 1px 0px 0px cornflowerblue;
 }
 
 #restart {
-  display: block;
-  padding: 0.5em 0.5em;
-  font-weight: 500;
-  color: lavender;
-  text-align: center;
   background-color: #f23838;
-  border: none;
-  font-size: 0.7em;
+  display: block;
   margin: auto;
+  padding: 1vw;
+  border: none;
+  text-align: center;
+  font-size: 1em;
+  color: white;
 }
 
 #restart:hover {
   background-color: #f23838;
-  color: white;;
-  cursor: pointer;
   box-shadow: inset -4em 0 0 0 rgb(0, 0, 0), inset 4em 0 0 0 rgb(0, 0, 0);
   transition: ease-out 0.7s;
+  color: #f23838;
+  cursor: pointer;
 }
 
 #user-score {
   background-color: #00000080;
-  color: #f23838;
-  font-size: 1.5vw;
   padding: 0.5vw 0;
+  border: 0.1vw solid #f23838;
+  color: #f23838;
+}
+
+#score {
+  margin: 1vw;
+}
+
+.enemy-user {
+  color: #f23838;
+}
+
+.my-user {
+  color: aquamarine;
 }
